# document-reader-ocr

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
config/: prompts.json
docs/: CLAUDE.MD
examples/: __init__.py  enhanced_usage.py  example_usage.py
src/document_reader/: __init__.py  image_enhancer.py  ocr_reader.py
tests/: __init__.py  test_enhanced_imports.py  test_ocr.py  test_simple.py  test_syntax_check.py
